--- a/wine/src/main/resources/templates/admin/indexProdutoEstoquista.html
+++ b/wine/src/main/resources/templates/admin/indexProdutoEstoquista.html
@@ -25,8 +25,8 @@
           <th scope="col">Tipo</th>
           <th scope="col">PreçoR$</th>
           <th scope="col">Situação</th>
-         <!-- <th scope="col">Avaliação</th>-->
-         <!-- <th scope="col">Descrição</th>-->
+     <!-- <th scope="col">Avaliação</th>
+          <th scope="col">Descrição</th>-->
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
