Ajustes no controle de sessão, visão estoquista.

--- a/wine/src/main/resources/templates/admin/estoquistaHome.html
+++ b/wine/src/main/resources/templates/admin/estoquistaHome.html
@@ -11,7 +11,7 @@
     <div class="container-ger">
         <img th:src="@{/admin/images/ger-produto.png}" class="card-img" alt="..." style="width: 15rem">
         <div class="card-body">
-            <a href="/produtos" class="btn btn-primary">Lista de produtos</a>
+            <a href="/produtosEstoquista" class="btn btn-primary">Lista de produtos</a>
         </div>
     </div>
     </div>
