--- a/wine/src/main/resources/templates/admin/visaoEstoquista.html
+++ b/wine/src/main/resources/templates/admin/visaoEstoquista.html
@@ -18,15 +18,15 @@
 <!--      <li class="nav-item"><a class="nav-link" href="/loja">Loja</a></li>-->
 <!--      <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>-->
       <!-- <li class="nav-item"><a class="nav-link" href="#categoria">Categoria</a></li>-->
-<!--      <li class="nav-item"><a class="nav-link" href="/produtos/catalogo">Catalogo</a></li>-->
+<!--      <li class="nav-item"><a class="nav-link" href="/produtos/catalogo">Catalogo</a></li>
 
       <li class="nav-item"><a class="nav-link" href="/produtos">Produtos</a></li>
-<!--      <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>-->
+      <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>-->
     </ul>
   </div>
   <div class="header-icon">
-    <i class='bx bx-search' id="search-icon"></i>
-<!--    <i class='bx bxs-cart-alt' ><span>0</span></i>-->
+<!--    <i class='bx bx-search' id="search-icon"></i>
+    <i class='bx bxs-cart-alt' ><span>0</span></i>-->
     <a href="/loginAdministrativo"><i class='bx bx-power-off' ></i></a>
   </div>
 
