--- a/wine/src/main/resources/static/admin/css/styles.css
+++ b/wine/src/main/resources/static/admin/css/styles.css
@@ -23,12 +23,6 @@ body{
 }
 
 
-.img{
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-}
-
 .login-content{
 	display: flex;
 	justify-content: flex-start;
@@ -231,3 +225,13 @@ form{
 		justify-content: center;
 	}
 }
+.letf-side{
+    display: flex;
+    flex-direction:column
+    }
+    .select-image{
+    max-width: 500px;
+    }
+    .select-image img{
+    width:100%;
+    }
