--- a/wine/src/main/resources/templates/admin/fragmentos.html
+++ b/wine/src/main/resources/templates/admin/fragmentos.html
@@ -23,12 +23,16 @@
             <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>
         </ul>
     </div>
-    <div class="header-icon">
+    <div class="search-icon">
         <i class='bx bx-search' id="search-icon"></i>
         <i class='bx bxs-cart-alt' ><span>0</span></i>
         <a href="/loginAdministrativo"><i class='bx bx-power-off' ></i></a>
+        <i onclick="criar login" class='bx bxs-log-in'></i>
     </div>
 
+    <div class="search-box">
+        <input type="search" name="" id="" placeholder="Pesquisar aqui...">
+    </div>
     <div class="search-box">
         <input type="search" name="" id="" placeholder="Pesquisar aqui...">
     </div>
