--- a/wine/src/main/resources/templates/admin/editProdutoEstoquista.html
+++ b/wine/src/main/resources/templates/admin/editProdutoEstoquista.html
@@ -7,12 +7,12 @@
   <form th:object="${requisicaoNovoProdutoDTO}"  th:action="@{/produtosEstoquista/{produtoCod}(produtoCod = ${produto.codigo})}" method="POST">
     <div class="form-group">
       <label class="form-label">Nome</label>
-      <input class="form-control" th:errorclass="is-invalid" type="text" min="0" max="200" th:field="*{nome}">
+      <input class="form-control" th:errorclass="is-invalid" type="text" min="0" max="200" th:field="*{nome}" disabled>
       <div class="invalid-feedback" th:errors="*{nome}"></div>
     </div>
     <div class="form-group">
       <label class="form-label">Tipo</label>
-      <select class="form-select" th:field="*{tipo}">
+      <select class="form-select" th:field="*{tipo}" disabled>
         <option th:each="tipo : ${categorias}" th:value="${tipo}" th:text="${tipo}"></option>
       </select>
       <div class="invalid-feedback"></div>
@@ -20,28 +20,28 @@
     <div class="form-group">
       <label class="form-label">Avaliação</label>
       <div class="rating-slider">
-        <input type="range" min="0" max="10" value="0" class="slider" id="myRange" th:field="*{avaliacao}">
+        <input type="range" min="0" max="10" value="0" class="slider" id="myRange" th:field="*{avaliacao}" disabled>
         <span class="rating-value" id="demo"></span>
       </div>
     </div>
     <div class="form-group">
       <label class="form-label">Descricao</label>
-      <textarea class="form-control" th:errorclass="is-invalid" rows="5" type="text" min="0" max="2000" th:field="*{descricao}"></textarea>
+      <textarea class="form-control" th:errorclass="is-invalid" rows="5" type="text" min="0" max="2000" th:field="*{descricao}" disabled></textarea>
       <div class="invalid-feedback" th:errors="*{descricao}"></div>
     </div>
     <div class="form-group">
       <label class="form-label">Quantidade</label>
-      <input class="form-control" th:errorclass="is-invalid" type="number" name="quantidade" min="0" max="100" th:field="*{quantidade}">
+      <input class="form-control" th:errorclass="is-invalid" type="text" name="quantidade" th:field="*{quantidade}">
       <div class="invalid-feedback" th:errors="*{quantidade}"></div>
     </div>
     <div class="form-group">
       <label class="form-label">Preco</label>
-      <input class="form-control" th:errorclass="is-invalid" type="number" name="preco" onchange="setTwoNumberDecimal" min="0" max="1000" step="0.1" value="0.00" th:field="*{preco}">
+      <input class="form-control" th:errorclass="is-invalid" type="number" name="preco" onchange="setTwoNumberDecimal" min="0" max="1000" step="0.1" value="0.00" th:field="*{preco}" disabled>
       <div class="invalid-feedback" th:errors="*{preco}"></div>
     </div>
     <div class="form-group">
       <label class="form-label">Imagens</label>
-      <input class="form-control" type="file" name="imagens" multiple>
+      <input class="form-control" type="file" name="imagens" multiple disabled>
       <div class="invalid-feedback"></div>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
