--- a/wine/src/main/resources/templates/admin/editProdutoEstoquista.html
+++ b/wine/src/main/resources/templates/admin/editProdutoEstoquista.html
@@ -7,31 +7,32 @@
   <form th:object="${produto}"  th:action="@{/produtosEstoquista/editProdutoEstoquista}" method="POST">
     <div class="form-group">
       <label class="form-label">Codigo</label>
-      <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{codigo}">
+      <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{codigo}" readonly>
       <div class="invalid-feedback" th:errors="*{nome}"></div>
     </div>
     <div class="form-group">
       <label class="form-label">Nome</label>
-      <input class="form-control" th:errorclass="is-invalid" type="text" min="0" max="200" th:field="*{nome}">
+      <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{nome}" readonly>
       <div class="invalid-feedback" th:errors="*{nome}"></div>
     </div>
-    <div class="form-group">
-      <label class="form-label">Tipo</label>
-      <select class="form-select" th:field="*{tipo}">
-        <option th:each="tipo : ${categorias}" th:value="${tipo}" th:text="${tipo}"></option>
-      </select>
-      <div class="invalid-feedback"></div>
-    </div>
-    <div class="form-group">
-      <label class="form-label">Avaliação</label>
-      <div class="rating-slider">
-        <input type="range" min="0" max="10" value="0" class="slider" id="myRange" th:field="*{avaliacao}">
-        <span class="rating-value" id="demo"></span>
-      </div>
-    </div>
+<!--    <div class="form-group">-->
+<!--      <label class="form-label">Tipo</label>-->
+<!--      <select class="form-select" th:field="*{tipo}">-->
+<!--        <option th:each="tipo : ${categorias}" th:value="${tipo}" th:text="${tipo}" ></option>-->
+<!--      </select>-->
+<!--      <div class="invalid-feedback"></div>-->
+<!--    </div>-->
+  <!-- Comentei o campo avaliação, tipo, imagem e situação pq não achei uma forma de evitar que o usuário edite ambos    -->
+<!--    <div class="form-group">-->
+<!--      <label class="form-label">Avaliação</label>-->
+<!--      <div class="rating-slider">-->
+<!--        <input type="range" min="0" max="10" value="0" class="slider" id="myRange" th:field="*{avaliacao}" readonly>-->
+<!--        <span class="rating-value" id="demo"></span>-->
+<!--      </div>-->
+<!--    </div>-->
     <div class="form-group">
       <label class="form-label">Descricao</label>
-      <textarea class="form-control" th:errorclass="is-invalid" rows="5" type="text" min="0" max="2000" th:field="*{descricao}"></textarea>
+      <textarea class="form-control" th:errorclass="is-invalid" rows="5" type="text" min="0" max="2000" th:field="*{descricao}" readonly></textarea>
       <div class="invalid-feedback" th:errors="*{descricao}"></div>
     </div>
     <div class="form-group">
@@ -41,21 +42,16 @@
     </div>
     <div class="form-group">
       <label class="form-label">Preco</label>
-      <input class="form-control" th:errorclass="is-invalid" type="number" name="preco" onchange="setTwoNumberDecimal" min="0" max="1000" step="0.1" value="0.00" th:field="*{preco}">
+      <input class="form-control" th:errorclass="is-invalid" text="number" name="preco" th:field="*{preco}" readonly>
       <div class="invalid-feedback" th:errors="*{preco}"></div>
     </div>
-    <div class="form-group">
-      <label class="form-label">Situação</label>
-      <select class="form-select" th:field="*{situacao}">
-        <option th:each="situacao : ${situacoes}" th:value="${situacao}" th:text="${situacao}"></option>
-      </select>
-      <div class="invalid-feedback"></div>
-    </div>
-    <div class="form-group">
-      <label class="form-label">Imagens</label>
-      <input class="form-control" type="file" name="imagens" multiple>
-      <div class="invalid-feedback"></div>
-    </div>
+<!--    <div class="form-group">-->
+<!--      <label class="form-label">Situação</label>-->
+<!--      <select class="form-select" th:field="*{situacao}">-->
+<!--        <option th:each="situacao : ${situacoes}" th:value="${situacao}" th:text="${situacao}"></option>-->
+<!--      </select>-->
+<!--      <div class="invalid-feedback"></div>-->
+<!--    </div>-->
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
