--- a/wine/src/main/resources/templates/admin/produto-detail.html
+++ b/wine/src/main/resources/templates/admin/produto-detail.html
@@ -20,24 +20,28 @@
     <div>
         <div class="container">
             <div class="letf-side">
+                <div th:each="imagem : ${imagens}">
                 <div class="items">
                     <div class="select-image">
-                        <img th:src="@{/admin/images/produto_1.jpg}" alt="">
+
+                            <img class="imagem-produto" th:src="'data:image/png;base64,' + ${imagem.base64}" />
+
                     </div>
                 </div>
-                <div class="thumbail">
-                    <div class="thumbail">
-                        <img th:src="@{/admin/images/produto_thu_1.jpg}" alt="">
-                    </div>
-                    <div class="thumbail">
-                        <img th:src="@{/admin/images/produto_thu_2.jpg}" alt="">
-                    </div>
-                    <div class="thumbail">
-                        <img th:src="@{/admin/images/produto_thu_3.jpg}" alt="">
-                    </div>
-                    <div class="thumbail">
-                        <img th:src="@{/admin/images/produto_thu_4.jpg}" alt="">
-                    </div>
+<!--                <div class="thumbail">-->
+<!--                    <div class="thumbail">-->
+<!--                        <img class="imagem-produto" th:src="'data:image/png;base64,' + ${imagem.base64}" />-->
+<!--                    </div>-->
+<!--                    <div class="thumbail">-->
+<!--                        <img class="imagem-produto" th:src="'data:image/png;base64,' + ${imagem.base64}" />-->
+<!--                    </div>-->
+<!--                    <div class="thumbail">-->
+<!--                        <img class="imagem-produto" th:src="'data:image/png;base64,' + ${imagem.base64}" />-->
+<!--                    </div>-->
+<!--                    <div class="thumbail">-->
+<!--                        <img class="imagem-produto" th:src="'data:image/png;base64,' + ${imagem.base64}" />-->
+<!--                    </div>-->
+<!--                </div>-->
                 </div>
             </div>
             <div class="right-side">
@@ -45,7 +49,7 @@
                 <h8 class="product-title" th:text="${produto.tipo.toString()}">#</h8>
                 <div class="rating">
                     <div class="rating-slider">
-                        <input type="range" min="0" max="10" value="0" class="stars" id="myRange" th:value="${avaliacao}">
+                        <input type="range" min="0" max="10" value="0" class="stars" id="myRange" th:value="${avaliacao}" readonly>
                         <span class="rating-value" id="demo"></span>
                     </div>
                     <span class="review-no">41 avaliações</span>
