--- a/wine/src/main/resources/templates/admin/estoquistaHome.html
+++ b/wine/src/main/resources/templates/admin/estoquistaHome.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/admin/visaoEstoquista :: head}"></head>
 <link rel="stylesheet" href="/admin/css/style.css">
+<body>
 <header th:replace="~{/admin/visaoEstoquista :: header}"></header>
 <section class="home1" id="home">
     <div class="home1-text" th:object="${usuarios}">
@@ -17,3 +18,5 @@
     </div>
     </div>
 </section>
+</body>
+</html>
