--- a/wine/src/main/resources/templates/admin/fragmentos.html
+++ b/wine/src/main/resources/templates/admin/fragmentos.html
@@ -15,19 +15,20 @@
     <div class="container">
         <ul class="navbar">
             <!--<li class="nav-item"><a class="nav-link" href="/">Home</a></li>-->
-            <li class="nav-item"><a class="nav-link" href="/loja">Loja</a></li>
-            <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
+<!--            <li class="nav-item"><a class="nav-link" href="/loja">Loja</a></li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>-->
            <!-- <li class="nav-item"><a class="nav-link" href="#categoria">Categoria</a></li>-->
             <li class="nav-item"><a class="nav-link" href="/produtos/catalogo">Catalogo</a></li>
             <li class="nav-item"><a class="nav-link" href="/produtos">Produtos</a></li>
             <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>
+            <li class="nav-item"><a class="nav-link" href="/pedidos">Pedidos</a></li>
         </ul>
     </div>
     <div class="search-icon">
-        <i class='bx bx-search' id="search-icon"></i>
-        <i class='bx bxs-cart-alt' ><span>0</span></i>
+<!--        <i class='bx bx-search' id="search-icon"></i>-->
+<!--        <i class='bx bxs-cart-alt' ><span>0</span></i>-->
         <a href="/loginAdministrativo"><i class='bx bx-power-off' ></i></a>
-        <i onclick="criar login" class='bx bxs-log-in'></i>
+<!--        <i onclick="criar login" class='bx bxs-log-in'></i>-->
     </div>
 
     <div class="search-box">
