--- a/wine/src/main/resources/templates/admin/home.html
+++ b/wine/src/main/resources/templates/admin/home.html
@@ -19,6 +19,12 @@
           <a href="/usuarios" class="btn btn-primary">Lista de Usuarios</a>
         </div>
       </div>
+    <div class="container-ger">
+      <img th:src="@{/admin/images/ger-usuario.png}" class="card-img" alt="..." style="width: 15rem">
+      <div class="card-body">
+        <a href="/pedidos" class="btn btn-primary">Lista de Pedidos</a>
+      </div>
+    </div>
     </div>
     </div>
   </div>
