--- a/wine/src/main/resources/templates/admin/fragmento_cliente.html
+++ b/wine/src/main/resources/templates/admin/fragmento_cliente.html
@@ -1,4 +1,4 @@
-<head th:fragment="head" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:fragment="client" xmlns:th="http://www.w3.org/1999/xhtml">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -9,27 +9,32 @@
 </head>
 
 <header th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
-<!--  <a href="/" class="logo"><i class='bx bxs-wine'></i>Wine Store</a>-->
+  <a href="/loja" class="logo"><i class='bx bxs-wine'></i>Wine Store</a>
 
   <i class='bx bx-menu' id="menu-icon"></i>
   <div class="container">
     <ul class="navbar">
       <!--<li class="nav-item"><a class="nav-link" href="/">Home</a></li>-->
-<!--      <li class="nav-item"><a class="nav-link" href="/loja">Loja</a></li>-->
-<!--      <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>-->
+      <li class="nav-item"><a class="nav-link" href="/user-profile">Perfil</a></li>
+      <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
       <!-- <li class="nav-item"><a class="nav-link" href="#categoria">Categoria</a></li>-->
-<!--      <li class="nav-item"><a class="nav-link" href="/produtos/catalogo">Catalogo</a></li>
-
-      <li class="nav-item"><a class="nav-link" href="/produtos">Produtos</a></li>
-      <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>-->
+      <li class="nav-item"><a class="nav-link" href="/produtos/catalogo">Catalogo</a></li>
+      <li class="nav-item"><a class="nav-link" href="/carrinho">Produtos</a></li>
+      <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>
+      <!--            <li class="nav-item"><a class="nav-link" href="/pedidos">Pedidos</a></li>-->
     </ul>
   </div>
   <div class="search-icon">
-<!--    <i class='bx bx-search' id="search-icon"></i>
-    <i class='bx bxs-cart-alt' ><span>0</span></i>-->
+    <i class='bx bx-search' id="search-icon"></i>
+    <a href="/carrinho"><i class='bx bxs-cart-alt' ><span th:text="${cartCount}">0</span></i>
     <a href="/loginAdministrativo"><i class='bx bx-power-off' ></i></a>
+      <a href="/registrar"><i onclick="criar login" class='bx bxs-log-in'></i></a>
+  </div>
   </div>
 
+  <div class="search-box">
+    <input type="search" name="" id="" placeholder="Pesquisar aqui...">
+  </div>
   <div class="search-box">
     <input type="search" name="" id="" placeholder="Pesquisar aqui...">
   </div>
