--- a/wine/src/main/resources/templates/admin/novo-produto.html
+++ b/wine/src/main/resources/templates/admin/novo-produto.html
@@ -41,8 +41,14 @@
         </div>
         <div class="form-group">
             <label for="imagens">Imagens</label>
-            <input type="file" class="form-control-file" id="imagens" name="imagens" multiple>
+            <input type="file" class="form-control-file" id="imagens" name="imagens" accept="image/jpeg, image/png, image/svg" multiple>
+            <div th:each="imagem : ${imagens}">
+                <!--            <img th:src="@{/admin/images/produto_1.jpg}" alt="">-->
+                <img class="imagem-produto" th:src="'data:image/png;base64,' + ${imagem.base64}" >
+            <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{'data:image/png;base64,' + ${imagem.base64}}">
+            </div>
         </div>
+        <input type="hidden" name="imgName" th:value="${requisicaoNovoProdutoDTO.imageName}" multiple>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
