Add sessão Clientes Ajuste nos icones fragmentos

--- a/wine/src/main/resources/templates/admin/fragmentos.html
+++ b/wine/src/main/resources/templates/admin/fragmentos.html
@@ -22,19 +22,17 @@
             <li class="nav-item"><a class="nav-link" href="/produtos">Produtos</a></li>
             <li class="nav-item"><a class="nav-link" href="/usuarios">Usuarios</a></li>
             <li class="nav-item"><a class="nav-link" href="/pedidos">Pedidos</a></li>
+            <li class="nav-item"><a class="nav-link" href="/clientes">Clientes</a></li>
         </ul>
     </div>
     <div class="search-icon">
-<!--        <i class='bx bx-search' id="search-icon"></i>-->
-<!--        <i class='bx bxs-cart-alt' ><span>0</span></i>-->
+<i class='bx bx-search' id="search-icon"></i>
+<i class='bx bxs-cart-alt' ><span>0</span></i>
         <a href="/loginAdministrativo"><i class='bx bx-power-off' ></i></a>
-<!--        <i onclick="criar login" class='bx bxs-log-in'></i>-->
+<i class='bx bxs-user'></i>
     </div>
 
-    <div class="search-box">
-        <input type="search" name="" id="" placeholder="Pesquisar aqui...">
-    </div>
-    <div class="search-box">
+      <div class="search-box">
         <input type="search" name="" id="" placeholder="Pesquisar aqui...">
     </div>
 </header>
