Ajustes na loja

--- a/wineLoja/src/main/resources/templates/fragmentos.html
+++ b/wineLoja/src/main/resources/templates/fragmentos.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <header th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
-    <a href="/" class="logo"><i class='bx bxs-wine'></i>Wine Store</a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <div class="container">
         <ul class="navbar">
-            <li class="nav-item"><a class="nav-link" href="/catalogo">Catalogo</a></li>
+            <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/produtos/catalogo">Catalogo</a></li>
             <li class="nav-item"><a class="nav-link" href="/pedidos">Pedidos</a></li>
         </ul>
     </div>
